@@ -1,10 +1,10 @@
 #define RUBY_VERSION "1.9.3"
-#define RUBY_PATCHLEVEL 264
+#define RUBY_PATCHLEVEL 265
 
-#define RUBY_RELEASE_DATE "2012-08-28"
+#define RUBY_RELEASE_DATE "2012-08-30"
 #define RUBY_RELEASE_YEAR 2012
 #define RUBY_RELEASE_MONTH 8
-#define RUBY_RELEASE_DAY 28
+#define RUBY_RELEASE_DAY 30
 
 #include "ruby/version.h"
 
