@@ -1,3 +1,8 @@
+Thu Aug 30 09:24:43 2012  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/uri/ftp.rb (URI::FTP#initialize): raise InvalidURIError if "//"
+	  is not present [ruby-core:47344] [Bug #6945]
+
 Tue Aug 28 00:40:14 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/webrick/test_cgi.rb (TestWEBrickCGI#start_cgi_server): there are
